--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,14 @@ label {
   text-align: center;
 
 }
+button {
+  font-weight: 700;
+  background-color: #75e2e6;
+  width: 32.7%;
+  height: 3em;
+  display: block;
+  margin: auto;
+}
 .clearfix:after {
     content: ' ';
     display: table;
