--- a/styles.css
+++ b/styles.css
@@ -5,36 +5,48 @@
 }
 body {
   border: 1px solid black;
-
 }
 
 header {
   height: 3.5em;
 }
-
+main {
+  margin: auto;
+}
 h1 {
   font-weight: 200;
   color: #ffffff;
+  width: 400px;
   text-align: center;
+  margin: auto;
 }
-
+input {
+  display: block;
+  margin: auto;
+  width: 32.7%;
+  height: 3em;
+  margin-bottom: 10px;
+}
 h1 span {
-  font-weight: 700;
+  font-weight: 700
 }
 #logo{
   float: left;
-  width: 6.6%;
+  width: 39px;
   padding: .69em;
   text-align: left;
 }
+
 .main {
   background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),
   url('images/park.jpg') no-repeat center center;
   background-size: cover;
   height: 591px;
-
+  margin: auto;
 }
-
+.main-center {
+  padding-top: 50px;
+}
 header {
   background-color: #75e2e6;
   display: block;
@@ -69,6 +81,7 @@ li {
   width: 10em;
   display: block;
   margin: auto;
+  margin-bottom: 10px;
 }
 label {
   color: #ffffff;
@@ -78,15 +91,22 @@ label {
 
 .threeArticles {
   position: relative;
+  padding: 1em;
 }
 .article {
-  width: 32.7%;
+  width: 25.7%;
   display: inline-block;
   margin: 1em auto;
+  padding: 3%;
+  vertical-align: top;
+
 }
 .article h2 {
   text-align: center;
-
+  margin-bottom: 10px;
+}
+.article p {
+  margin-bottom: 2em;
 }
 button {
   font-weight: 700;
@@ -95,6 +115,15 @@ button {
   height: 3em;
   display: block;
   margin: auto;
+}
+.dark-blue-button {
+  width: 100%;
+  color: #ffffff;
+  background-color: #048eaa;
+  margin: 10px 0 0 0;
+
+
+
 }
 .clearfix:after {
     content: ' ';
